--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ gems:
   - bourbon
   
 # Site settings
-title: "Mediator"
+title: "Design Theory"
 description: > # this means to ignore newlines until "email:"
-   A Jekyll theme - Medium inspired
+   GRAPHICS.ANIMATION.DESIGN
 
-email: a-mail@mail.mail
+email: rama.ksriram@gmail.com
 #blog logo
 logo: "/assets/images/df_logo.jpg"
 # blog cover
 cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+name: 'K.Ramachandran'
+author: 'K.Ramachandran'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
