--- a/_config.yml
+++ b/_config.yml
@@ -22,26 +22,26 @@ author_image: "/assets/images/author.jpg"
 paginate:	5
 
 url: "" # the base hostname & protocol for your site
-baseurl: ""
+baseurl: "designtheory.github.io"
 
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
+    url:	https://twitter.com/ramaksriram
     desc: Follow me on twitter
-    share_url: http://twitter.com/share
+    share_url: http://twitter.com/ramaksriram
     share_title: ?text=
     share_link: "&amp;url="
 
 #  - icon:	facebook
-#    url:	https://facebook.com/???
+#    url:	https://www.facebook.com/K.Ramachandran
 #    desc: Connect with me facebook
-#    share_url: https://www.facebook.com/sharer.php
+#    share_url: https://www.facebook.com/K.Ramachandran
 #    share_title: ?t=
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/dirkfabisch
+    url:	https://github.com/designtheory
     desc:	Fork me on github
     share_url:
     share_title:
