--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author_image: "/assets/images/author.jpg"
 paginate:	5
 
 url: "" # the base hostname & protocol for your site
-baseurl: "designtheory.github.io"
+baseurl: ""
 
 # social icons and sharing options
 social:
@@ -34,7 +34,7 @@ social:
     share_link: "&amp;url="
 
 #  - icon:	facebook
-#    url:	https://www.facebook.com/K.Ramachandran
+#    url:	https://facebook.com/???
 #    desc: Connect with me facebook
 #    share_url: https://www.facebook.com/K.Ramachandran
 #    share_title: ?t=
