--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # this means to ignore newlines until "email:"
 
 email: rama.ksriram@gmail.com
 #blog logo
-logo: "/assets/images/df_logo.jpg"
+logo: "/assets/images/DT_logo.jpg"
 # blog cover
 cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
